# Sentinel

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  run_dev.py
.serena/: project.yml
.serena/memories/: api_endpoints.md  code_style_conventions.md  environment_setup.md  project_overview.md  project_structure.md  suggested_commands.md  task_completion_checklist.md  tech_stack.md
docs/: implementation-outline.md
frontend/: package-lock.json  package.json
frontend/src/: App.tsx
src/sentinel/: __init__.py  main.py
src/sentinel/agents/: __init__.py  test_generator.py
src/sentinel/api/: __init__.py  health.py  test_runs.py  webhooks.py
src/sentinel/core/: __init__.py  config.py  logging.py
src/sentinel/integrations/: __init__.py  bitbucket.py  jira.py
src/sentinel/models/: __init__.py  base.py  test_run.py
src/sentinel/services/: __init__.py
tests/: __init__.py  test_health.py
